MINOR: Share group tidying